Dateinamen sind Case-Sensitiv …

--- a/Tex/Funktionen.tex
+++ b/Tex/Funktionen.tex
@@ -126,7 +126,7 @@ public class Functions{
 Ein sehr beliebtes Zitat für Rekursion ist: ''Um Rekursion zu verstehen, muss man Rekursion verstanden haben''. Das trifft das Problem an der Rekursion ziemlich gut. Es ist eigentlich keine schwierige Sache, aber das menschliche Gehirn ist diese Art von denken nicht gewohnt. 
 
 \begin{figure}
-	\begin{center}\includegraphics{images/Rekursion.png}\end{center}
+	\begin{center}\includegraphics{images/rekursion.png}\end{center}
 	\caption{Grafische Rekursion}
 \end{figure}
 
