wir sind NICHT der Mathevorkurs

--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -31,7 +31,7 @@ DIV15,BCOR5.0mm,smallheadings,final, openany]{scrbook}
 
 \begin{document}
 
-\title{Vorkurs Mathematik}
+\title{Vorkurs Programmierung}
 \author{Sebastian Mai \\ Kai Dannies
 %FaRaFIN Vorkurs-Team
 }
@@ -39,8 +39,8 @@ DIV15,BCOR5.0mm,smallheadings,final, openany]{scrbook}
 {./images/farafin_logo_schwarz_auf_weiss.png}\end{center}}
 \lowertitleback{Dieses Heft wurde vom Fachschaftsrat der Fakultät für
 Informatik der Otto-von-Guericke-Universität Magdeburg für den
-Mathematik-Vorkurs 2011 produziert.}
-\date{2011}
+Vorkurs für Programmierung 2012 produziert.}
+\date{2012}
 \maketitle
 \tableofcontents
 
