ein xkcd zur auflockerung

--- a/Tex/Unix.tex
+++ b/Tex/Unix.tex
@@ -95,7 +95,13 @@ Auch diese Operatoren sind oft nützlich:
 \item \lstinline$command >> file$ hängt die Ausgabe hinten an die Datei an
 \end{itemize}
 
+
 \subsection{Vom Textmodus zum Graphikmodus und wieder zurück}
+\begin{figure}
+	\centering
+	\includegraphics[width=\textwidth]{images/command_line_fu.png}
+	\caption{\href{http://xkcd.com/196}{xkcd.com/196}}
+\end{figure}
 Wie man zum Beispiel in den Rechnerpools der Fakultät sieht, besitzen moderne Unixoide Betriebssysteme nicht mehr ausschließlich den Textmodus. Man kann auch wie gewohnt in Fenstern bunte Bildchen anschauen.
 
 Im Gegensatz zu Windows, kann man hier allerdings Programme nicht wirklich von der Shell losgelöst starten, die Ein- und Ausgaben sind nur für den User nicht mehr sichtbar. Besonders deutlich wird wenn man zum Beispiel „firefox“ über ein Terminal startet – ob Webbrowser, Spiel oder Programmierumgebung – jedes Programm hängt an der Shell.
