fehler korrigiert (sbin)

--- a/Tex/Unix.tex
+++ b/Tex/Unix.tex
@@ -25,7 +25,7 @@ Verzeichnis & Bedeutung \\ \hline
 /opt & manuell installierte Programme \\
 /proc & Systemressourcen \\
 /root & Das Heimatverzeichnis des „root“-Nutzers \\
-/bin & das „bin“ für Programme die nur root ausführen darf \\
+/sbin & das „bin“ für Programme die nur root ausführen darf \\
 /tmp & Temporäre Dateien \\
 /usr & „unix system resources“ Datein die für alle Nutzer relevant sind \\
 /var & Variabel
