aufgabe zu einkaufswägen

--- a/Tex/Funktionen.tex
+++ b/Tex/Funktionen.tex
@@ -165,6 +165,14 @@ In der Funktion \textit{faculty} findet ihr beide Elemente, die jede Rekursion e
 \section{Aufgaben}
 
 \begin{enumerate}
+	\item Du kennst sicherlich den Bereich in diversen Supermärkten in denen die Einkaufswägen stehen. Mit dem Programm ShoppingCart.java wollen wir diesen Bereich jetzt nachbauen.
+	\begin{itemize}
+		\item Mach aus der Ausgabe eine Funktion mit einem aussagekräftigen Namen.
+		\item Schreibe eine Funktion, die einen Einkaufswagen aus einer zufällig gewählten Reihe wegnimmt.
+		\item Schreibe eine Funktion, die einen Einkaufswagen in eine zufällge Reihe einfügt.
+		\item Schreibe eine Funktion, die den Einkaufswagen in der längsten Reihe wieder einreiht.
+		\item Simuliere den Supermarkt in mehreren Schritten. Wenn du es dir leicht machen willst, nimmt der Kunde den Einkaufswagen in einer Phase mit und bringt ihn sofort zurück. Die Fortgeschrittenen Java-Programmierer unter euch können mehrere Kunden im Markt simulieren.
+	\end{itemize}
 	\item Schreibe ein Programm, dass die n-te Fibonaccizahl ausrechnet.
 	\item Schreibe ein Programm, dass die Ackermannfunktion berechnet.
 	\item Schreibe ein Programm, das die Fakultät berechnet ohne Rekursion zu benutzen.
