--- a/Tex/Variablen.tex
+++ b/Tex/Variablen.tex
@@ -15,7 +15,7 @@ text = "Hello World"; // weist der Variable text den Wert "Hello World" zu.
 System.out.println(text); // gibt den Wert der Variablen text aus.
 \end{lstlisting}
 
-Das neue Programm tut dasselbe wie das ursprüngliche „Hello World“-Proramm, ist allerding besser als das alte, denn die Ausgabe ist jetzt von der Eingabe (im Quelltext) getrennt.
+Das neue Programm tut dasselbe wie das ursprüngliche „Hello World“-Proramm, ist allerdings besser als das alte, denn die Ausgabe ist jetzt von der Eingabe (im Quelltext) getrennt.
 
 \section {Befehle}
 Wie wir sehen ist das „Hello World“-Programm länger geworden. Um Variablen zu manipulieren braucht man nämlich Befehle. Diese Befehle kann man daran erkennen, dass sie mit einem Semikolon enden. Abgearbeitet werden sie in der Reihenfolge in der man sie liest. Im Quelltext oben stehen drei Befehlsaufrufe:
@@ -66,7 +66,7 @@ x += y; // entspricht x = x + y;
 x++; // entspricht x = x + 1;
 x--; // x = x - 1;
 \end{lstlisting}
-Definition und Deklaration können auch in einer Anweisung gemacht werden: 
+Deklaration und Definition können auch in einer Anweisung gemacht werden: 
 \begin{lstlisting}
 String text = "Hello World";
 \end{lstlisting}
