--- a/Tex/Variablen.tex
+++ b/Tex/Variablen.tex
@@ -98,10 +98,10 @@ funktion(parameter1, parameter2 /* . . . */);
 \end{lstlisting}
 
 \section {Einlesen von Werten}
-Um Werte einzulesen braucht man einen Variable vom Typ \lstinline$Scanner$. Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
+Um Werte einzulesen braucht man eine Variable vom Typ \lstinline$Scanner$. Mit dem Scanner kann man nicht nur von der Standarteingabe, sondern auch aus Dateien, Netzwerkverbindungen und anderen Quellen Daten einlesen. 
 Deswegen muss man Angeben, dass der Scanner die Daten aus \lstinline$System.in$ beziehen soll.
 Danach kann man mit \lstinline$scannervariable.next()$ die nächste Eingabe abholen.
-Außerdem muss man um den Scanner benutzen zu können mit \lstinline$import java.util.Scanner;$ ein weiteres Paket einbinden in dem Scanner enthalten ist.
+Außerdem muss man um den Scanner benutzen zu können mit \lstinline$import java.util.Scanner;$ ein weiteres Paket einbinden in dem der Scanner enthalten ist.
 Im Quelltext sieht das so aus:
 \begin{lstlisting}
 import java.io.*; // Pakete fuer ein und Ausgaben
