--- a/Tex/RechnerIstDumm.tex
+++ b/Tex/RechnerIstDumm.tex
@@ -24,7 +24,7 @@ Der Computer kann eigentlich nur eine Sache: sehr schnell rechnen. Die Programme
 	\item[ELIZA:] We were discussing you -- not me.
 \end{itemize}
 
-Unter \url{http://www.masswerk.at/elizabot/} könnt ihr es selber ausprobieren wenn ihr wollt. Auch dieses Programm zeigt keinerlei Intelligenz, obgleich die Antworten meistens Sinn machen. Der Computer macht nichts anderes als eine Antwort, basierend auf den Informationen die er in einer Datenbank hat, auszurechnen die wahrscheinlich eine sinnvolle Antwort auf die Aussage des Nutzers ist. Damit der Computer so etwas kann, müsst ihr als Programmierer ihm beibringen, wie er mit simplen Rechenoperationen dieses Ergebnis erreicht.
+Unter \url{http://www.masswerk.at/elizabot/} kannst du es selber ausprobieren wenn ihr wollt. Auch dieses Programm zeigt keinerlei Intelligenz, obgleich die Antworten meistens Sinn machen. Der Computer macht nichts anderes als eine Antwort, basierend auf den Informationen die er in einer Datenbank hat, auszurechnen die wahrscheinlich eine sinnvolle Antwort auf die Aussage des Nutzers ist. Damit der Computer so etwas kann, musst du als Programmierer ihm beibringen, wie er mit simplen Rechenoperationen dieses Ergebnis erreicht.
 
 \section{Arbeitsweise eines Rechners}
 
