--- a/Tex/main.tex
+++ b/Tex/main.tex
@@ -19,6 +19,7 @@ DIV15,BCOR5.0mm,smallheadings,final, openany]{scrbook}
 \usepackage{microtype}
 %Programmierung
 \usepackage{listings}
+\lstset{basicstyle=\footnotesize\ttfamily,breaklines=true}
 
 %\usepackage[Bjornstrup]{fncychap}
 \setcounter{tocdepth}{0} % Nur Kapitel im Inhaltsverzeichnis anzeigen
@@ -50,7 +51,7 @@ Vorkurs für Programmierung 2012 produziert.}
 %\include{Sequenz}
 \include{Variablen}
 \include{Schleifen}
-\include{IdeeZuProgram}
+\include{IdeeZuProgramm}
 \include{Funktionen}
 \include{Programmierstil}
 \include{Debugging}
